afo-pi-cluster/kustomize/system-apps/clickstack/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clickstack
  labels:
    name: clickstack
